Might not want to use FixServerFolders
puckzxzToday: "just a heads up, you could make a change to the guilds there that could have unintended changes elsewhere
everything in the sidebar is treated as a guild"

--- a/themes/EG_FixServerFolders.theme.css
+++ b/themes/EG_FixServerFolders.theme.css
@@ -13,3 +13,7 @@
 .wrapper-21YSNc .da-blobContainer {
 	margin-left: -9px !important;
 }
+
+.expandedGuilds-1JMD4M .listItem-2P_4kh .pill-31IEus {
+	margin-left: -5px !important;
+}
