Rename to a better name

--- a/themes/EG_Si1knDoesNotLikeTheNewEmojiUi.theme.css
+++ b/themes/EG_Si1knDoesNotLikeTheNewEmojiUi.theme.css
@@ -1,5 +1,5 @@
 /**
- * @name EG - Si1knDiscordUI
+ * @name EG - Si1knDoesNotLikeTheNewEmojiUi
  * @author Eric Golde & Si1kn
  * @version 1.0.0
  * @description I fixed those pesky emojis for you :)
