for the love of god stop messing with the buttons! this should put a end to discord annoyingness

--- a/themes/EG_HideNitroText.theme.css
+++ b/themes/EG_HideNitroText.theme.css
@@ -6,7 +6,7 @@
 */
 
 /*Remove Nitro present button when sending messages*/
-.da-channelTextArea .da-buttons button[tabindex="2"] {
+.da-channelTextArea .da-buttons button[aria-label="Send a gift"] {
     display: none;
 }
 
