--- a/themes/EG_Main.theme.css
+++ b/themes/EG_Main.theme.css
@@ -1,103 +1,207 @@
 /**
- * @name EG - Background
- * @author Eric Golde, puckzyz
- * @version 1.0.0
- * @description My config for NotANotherAnimeTheme, plus a very minor theme change
+* @name EG - Main
+* @author Eric & puckzxz#2080
+* @version 3.2
+* @description My config for NotANotherAnimeTheme, plus some a very minor theme changes
+* @source https://github.com/puckzxz/NotAnotherAnimeTheme
+* @updateUrl https://raw.githubusercontent.com/puckzxz/NotAnotherAnimeTheme/master/NotAnotherAnimeTheme.theme.css
 */
 
-/* NotANotherAnimeTheme */
-@import url(https://puckzxz.github.io/NotAnotherAnimeTheme/css/dcsl.css);
+@import url(https://puckzxz.github.io/NotAnotherAnimeTheme/build/v3/naat.v3.css);
 
+/*
+  To make editing this theme easier I recommend using Notepad++
+  you can download it for free here https://notepad-plus-plus.org/download/
+*/
+
+/* Any images you use MUST end with .jpg or .png or any other image extension */
 
 :root {
-    /* Edit this to change your background */
-    --background-image: url(https://i.imgur.com/7SwrE5R.jpg); /* format is url(IMAGE URL HERE) */
-    /* Edit this to change your friends icon picture, picture  */
-    --friends-icon: url(https://i.imgur.com/NoI1Ebz.png); /*
-    Change your friends icon iamge position
-    Default: center center
-    */
-    --friends-icon-position: center center;
+  /*
+    Theme Background
+  */
+  --theme-background-image: url(https://i.imgur.com/7SwrE5R.jpg);
 
-    /*
+  /*
+    Main Theme Color
+  */
+  --main-theme-color: rgb(67, 181, 129);
+
+  /*
+    Main Theme Transparency
+  */
+  --theme-transparency: rgba(0, 0, 0, 0.8);
+
+  /*
+    Home Icon Image
+  */
+  --home-icon-image: url(https://i.imgur.com/NoI1Ebz.png);
+
+  /*
+    Change your friends icon image position
+  */
+  --home-icon-image-position: center center;
+
+  /*
     Change your friends icon image zoom
-    Default: 100% 
-    */
-    --friends-icon-zoom: 100%;
+  */
+  --home-icon-image-zoom: 100%;
 
-    /*
-    Change the main theme color
-    Default: rgb(67, 181, 129)
-    */
-    --main-color: rgb(67, 181, 129);
+  /*
+    Server Listing Width
+    Single Column:  72px
+    Double Column:  126px
+    Triple Column:  184px
+    Quad Column:    242px
+  */
+  --server-listing-width: 72px;
 
-    /*
-    Change global transparency
-    You can use this to make your background image lighter or darker
-    Default: rgba(0, 0, 0, 0.8)
-    */
-    --main-transparency: rgba(0, 0, 0, 0.8);
+  /*
+    Font Size
+  */
+  --font-size: 100%;
 
-    /*
+  /*
+    Mention colors
+  */
+  --mention-color: rgba(250, 166, 26, 0.05);
+  --mention-sider: rgba(250, 166, 26, 1);
+  --mention-hover-color: rgba(250, 166, 26, 0.08);
+
+  /*
+    Server category hover color
+  */
+  --category-hover-color: rgb(60, 202, 138);
+
+  /*
     Change the unread server animation.
     Replace it with "none" in order to remove any animations and use the main color instead
-    Default: rainbow
-    */
-    --unread-server-animation: rainbow;
+  */
+  --unread-server-animation: rainbow;
 
-    /*
-    Change background color when you hover members or friends
-    Default: rgba(255, 255, 255, .15)
-    */
-    --hover-list-bg-color: rgba(255, 255, 255, .15);
+  /*
+    Video / Screen share buttons
+  */
+  --video-screen-button-background-color: rgba(200, 200, 200, 0.2);
+  --video-screen-button-foreground-color: white;
+  --video-screen-button-background-hovor-color: rgba(200, 200, 200, 0.4);
+  --video-screen-button-foreground-hovor-color: white;
 
-    /*
-    Change the color of the borders between messages
-    Default: hsla(0,0%,100%,.1)
-    */
-    --border-lines-color: hsla(0,0%,100%,.1);
+  /*
+    Role Title Color
+  */
+  --member-listing-role-color: var(--main-theme-color);
 
-    /*
-    Change the scroll bar color
-    Default: rgba(255,255,255, .15)
-    */
-    --scroll-bar-color: rgba(255,255,255, .15);
+  /*
+    Small User Popout
+  */
+  --small-user-popout-background-image: var(--theme-background-image);
+  --small-user-popout-background-transparency: rgba(0, 0, 0, 0.6);
+  --small-user-popout-background-image-position: center;
 
-    /*
-    Change chat messages font size, you can use any unit: px, em, rem, %
-    Default: 16px
-    */
-    --font-size: 16px;
+  /*
+    Big User Popout
+  */
+  --big-user-popout-background-image: var(--theme-background-image);
+  --big-user-popout-background-transparency: rgba(0, 0, 0, 0.6);
+  --big-user-popout-background-image-position: center;
 
-    /*
-    Change the text color of a selected text channel or joined voice channel
-    Default: #f6f6f7
-    */
-    --selected-text-voice-color: #f6f6f7;
+  /*
+    Code Markup
+  */
+  --code-markup-background-color: rgba(0, 0, 0, 0.6);
+  --code-markup-border: 1px solid transparent;
 
-    /*
-    Change the text color of a hovered text or voice channel
-    Default: rgba(255, 255, 255, 0.75)
-    */
-    --channel-hover-text-color: rgba(255, 255, 255, 0.75);
+  /*
+    Message Box Transparency
+  */
+  --message-box-transparency: rgba(0, 0, 0, 0.6);
 
+  /*
+    Embed Background Transparency
+  */
+  --embed-background-transparency: rgba(0, 0, 0, 0.6);
 
-    /*
-    Change the text color of an unread text channel
-    Default: #dcddde
-    */
-    --unread-text-color: #dcddde;
+  /*
+    Message Hover Buttons
+  */
+  --message-hover-buttons-background: rgba(200, 200, 200, 0.1);
 
+  /*
+    Context Menu Transparency
+  */
+  --context-menu-transparency: rgba(15, 15, 15, 0.8);
 
-    /*
-    Change the transparency of the user popout when clicking a member
-    Default: rgba(0, 0, 0, 0.8)
-    */
-    --user-popup-background: rgba(0, 0, 0, 0.8);
+  /*
+    Add Server / Discovery Icon
+  */
+  --add-discover-icon-transparency: rgba(200, 200, 200, 0.15);
+  --add-discover-icon-color: #43b581;
+
+  /*
+    Channel Limit Number Color
+  */
+  --channel-limit-count-color: var(--channels-default);
+  --channel-limit-background-left: rgba(200, 200, 200, 0.1);
+  --channel-limit-background-right: rgba(200, 200, 200, 0.2);
+
+  /*
+    Scrollbar Colors
+  */
+  --scrollbar-color: rgba(200, 200, 200, 0.2);
+
+  /*
+    Unread Message Divider
+  */
+  --unread-message-divider-color: #f04747;
+  --unread-message-divider-font-color: #fff;
+
+  /*
+    New Messages Bar Color
+  */
+  --new-messages-bar-background-color: #7289da;
+  --new-messages-bar-font-color: #fff;
+
+  /*
+    Emoji Menu
+  */
+  --emoji-menu-background-color: rgba(0, 0, 0, 0.6);
+  --emoji-menu-sider-background-color: rgba(0, 0, 0, 0);
+  --emoji-menu-server-header-background-color: rgba(0, 0, 0, 0.8);
+  --emoji-menu-bottom-bar-background-color: black;
+  --emoji-menu-search-bar-background-color: rgba(200, 200, 200, 0.1);
+
+  /*
+    Message Search
+  */
+  --message-search-menu-background-color: rgba(0, 0, 0, 0.8);
+  --message-search-container-background-color: rgba(0, 0, 0, 0.6);
+  --message-search-result-background-color: rgba(200, 200, 200, 0.05);
+
+  /*
+    Channel colors
+  */
+  --text-voice-channel-color: rgb(142, 146, 151);
+  --text-voice-channel-hover-color: #dcddde;
+  --text-voice-channel-selected-text-color: #fff;
+  --unread-text-channel-color: #fff;
+  --unread-text-channel-bubble-color: var(--main-theme-color);
+
+  /*
+    Folders
+  */
+  --folder-background-color: #2f3136;
+  --expanded-folder-background-color: transparent;
+
+  /*
+    Reactions
+  */
+  --reaction-emoji-background-color: rgba(0, 0, 0, 0);
+  --reaction-emoji-border-color: 1px solid transparent;
+  --reaction-emoji-hover-background-color: rgba(255, 255, 255, 0.1);
+  --reaction-emoji-hover-border-color: rgba(255, 255, 255, 0.2);
 }
 
-
-/*Change the guild seperator to be a nice blue*/
-.guildSeparator-3s64Iy {
+.guildSeparator-nWMCrR {
     background: #1748c3;
 }
